[gd_scene load_steps=11 format=3 uid="uid://dfnx1gcgyc1me"]

[ext_resource type="Texture2D" uid="uid://2q3lldbtr0dg" path="res://assests/textures/bg.png" id="1_cjwsh"]
[ext_resource type="Script" path="res://scripts/game.gd" id="1_ljr1n"]
[ext_resource type="PackedScene" uid="uid://bjr0xw2tx60vq" path="res://scenes/hud.tscn" id="2_5b7fh"]
[ext_resource type="PackedScene" uid="uid://c3dfdvqc3rtho" path="res://scenes/player.tscn" id="2_ybm7h"]
[ext_resource type="PackedScene" uid="uid://cogj1os1iluwo" path="res://scenes/enemy_spawner.tscn" id="3_qi7qo"]
[ext_resource type="AudioStream" uid="uid://dn0lposutp5gy" path="res://assests/audio/mixkit-arcade-game-explosion-echo-1698.wav" id="7_andsh"]
[ext_resource type="AudioStream" uid="uid://e34bdnvtnxb2" path="res://assests/audio/explode.wav" id="7_wt3y0"]
[ext_resource type="AudioStream" uid="uid://cf44ny5j0mbho" path="res://assests/audio/game_over.wav" id="8_fon4o"]
[ext_resource type="AudioStream" uid="uid://g1n82rtf7jmq" path="res://assests/audio/space-atmospheric-background-124841.mp3" id="9_eg05d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f7o6f"]
size = Vector2(273, 1076)

[node name="Game" type="Node2D"]
script = ExtResource("1_ljr1n")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("2_5b7fh")]

[node name="Background" type="TextureRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("1_cjwsh")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("2_ybm7h")]
position = Vector2(80, 354)

[node name="EnemySpawner" parent="." instance=ExtResource("3_qi7qo")]

[node name="Deathzone" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deathzone"]
position = Vector2(-285.5, 377)
shape = SubResource("RectangleShape2D_f7o6f")

[node name="EnemyHitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_wt3y0")
volume_db = 15.0

[node name="PlayerTookDamge" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_andsh")
volume_db = 10.0

[node name="GameOVer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_fon4o")

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_eg05d")
volume_db = -5.0

[connection signal="took_damage" from="Player" to="." method="_on_player_took_damage"]
[connection signal="enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_enemy_spawned"]
[connection signal="area_entered" from="Deathzone" to="." method="_on_deathzone_area_entered"]
